# stieltjes-triton

./: LICENSE  README.md  pyproject.toml  stieltjes_attention.py
.github/workflows/: tests.yml
benchmarks/: bench_stieltjes.py  bench_triton_vs_ref.py  stieltjes.py
figures/: fig_all_training_curves.py  fig_entropy_curriculum_boundary.py  fig_q_curve_bsearch.py  fig_throughput_a100_vs_h100.py  fig_throughput_and_memory.py  fig_training_curves.py  fig_velickovic_attention_maps.py  fig_velickovic_entropy_vs_seq.py
nanogpt/: __init__.py  analyze.py  data.py  eval_accuracy.py  model.py  train.py  train_curriculum.py
tests/: conftest.py  test_data.py  test_imports.py  test_kernel.py  test_model.py  test_stieltjes.py
