[project]
name = "stieltjes-attention"
version = "0.1.0"
description = "Flash attention with Stieltjes-transform normalisation (Triton forward, PyTorch backward)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.4",
    "triton>=3.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["stieltjes_attention"]
